#61 fix spacing around scrollable elements

--- a/src/components/create-hero-screen/create-hero-screen.css
+++ b/src/components/create-hero-screen/create-hero-screen.css
@@ -19,3 +19,7 @@
     text-align: right;
     padding: 12px 0;
 }
+
+.spacedElement {
+    margin-top: 24px;
+}
